--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "sanity:login": "sanity login",
     "sanity:create-org": "sanity organizations create",
     "sanity:init": "sanity init",
+    "sanity:dev": "sanity dev",
+    "sanity:build": "sanity build",
     "sanity:deploy": "sanity deploy",
     "sanity:start": "sanity start",
     "sanity:dataset-create": "sanity dataset create",
@@ -23,22 +25,26 @@
     "sanity:hook-create": "sanity hook create"
   },
   "dependencies": {
-    "@astrojs/react": "^4.3.1",
+    "@astrojs/node": "^9.5.0",
+    "@astrojs/react": "^4.4.0",
     "@portabletext/types": "^2.0.15",
     "@sanity/astro": "^3.2.10",
-    "@sanity/client": "^7.11.2",
+    "@sanity/client": "^7.12.0",
     "@sanity/image-url": "^1.2.0",
     "@tailwindcss/vite": "^4.1.13",
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "@types/react-is": "^19.0.0",
-    "astro": "^5.13.9",
+    "astro": "^5.15.1",
     "astro-portabletext": "^0.11.3",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-is": "^19.1.1",
-    "sanity": "^4.9.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-is": "^19.2.0",
+    "sanity": "^4.11.0",
     "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.13"
+  },
+  "devDependencies": {
+    "@sanity/cli": "^4.11.0"
   }
 }
