--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "@astrojs/node": "^9.5.0",
     "@astrojs/react": "^4.4.0",
     "@portabletext/types": "^2.0.15",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-slot": "^1.2.3",
     "@sanity/astro": "^3.2.10",
     "@sanity/client": "^7.12.0",
     "@sanity/image-url": "^1.2.0",
