feat: update environment variables for page and navbar titles; enhance Navbar component with dynamic title

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 PUBLIC_SANITY_PROJECT_ID="your sanity project id here"
 PUBLIC_SANITY_DATASET="production"
+
+PUBLIC_PAGE_TITLE="in the browser tab title"
+PUBLIC_NAVBAR_TITLE="what you want in the navbar"
+PUBLIC_COPYRIGHT_HOLDER="your name or your company's name here"
