update .env.example with resend variables

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ PUBLIC_SANITY_DATASET="production"
 PUBLIC_PAGE_TITLE="in the browser tab title"
 PUBLIC_NAVBAR_TITLE="what you want in the navbar"
 PUBLIC_COPYRIGHT_HOLDER="your name or your company's name here"
+
+# Get your API key from https://resend.com/api-keys
+RESEND_API_KEY="re_xxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+RESEND_RECIPIENT_EMAIL="your/client email here"
